fixed white space

--- a/static/index.css
+++ b/static/index.css
@@ -1,3 +1,8 @@
+html{
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+}
 body{
     margin: 0%;
     padding: 0%;
